# kyrs_django_rest

./: .env_exemple  Dockerfile  README.MD  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
habit/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_initial.py
nginx/: Dockerfile  nginx.conf
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
